# veritas

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 2c52703be08a_create_documents_table.py  49f317125177_add_user_id_to_documents_and_screening.py  a3f8b2c4d5e6_add_screening_results_table.py  b7c9d1e2f3a4_change_user_id_to_string.py  c1d2e3f4a5b6_create_audit_logs_table.py  d4e5f6a7b8c9_add_expires_at_to_documents.py  e5f6a7b8c9d0_add_api_keys_table.py  (+2 more)
apps/api/models/: risk_model.pkl
apps/api/src/: __init__.py  config.py  database.py  exceptions.py
apps/api/src/models/: base.py  (+6 more)
apps/api/tests/: __init__.py  conftest.py  test_adverse_media_service.py  test_api_keys.py  test_audit.py  test_business_doc_parser.py  test_config.py  test_document_age.py  test_document_processor.py  test_documents_status.py  test_documents_upload.py  test_gdelt_client.py  test_gdpr.py  test_google_vision.py  test_health.py  test_jwks.py  test_kyc.py  test_multi_tenancy.py  test_passport_parser.py  test_performance.py  test_rate_limiting.py  test_risk_endpoints.py  test_risk_features.py  test_risk_model.py  test_risk_service.py  test_risk_training.py  test_sanctions_matcher.py  test_sanctions_router.py  test_sanctions_service.py  test_sanctions_text_utils.py  test_sentiment.py  test_token_validation.py  test_users.py  test_utility_bill_parser.py  test_webhook_delivery.py  test_webhooks.py
(+103 files in other folders)
