[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
